--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
-    "node-fetch": "^2.6.1"
+    "dotenv": "^10.0.0",
+    "node-fetch": "^2.6.1",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
